# aws-comment-analysis-service

./: Makefile  OpenAPI.yml  README.md  samconfig.toml  template.yaml
events/: AnalyzeData.json  CreateReport.json  FormatData.json  GetData.json  TransformData.json
lambda/analyze_data/src/: lambda_function.py
lambda/create_report/: Dockerfile  pyproject.toml  requirements-poetry.txt
lambda/create_report/src/: lambda_function.py
lambda/get_data/: Makefile  pyproject.toml  requirements-poetry.txt
lambda/get_data/src/: lambda_function.py
lambda/transform_data/: requirements-poetry.txt
lambda/transform_data/src/: lambda_function.py
statemachine/: asl.json
